objects/nPortal__Route_Agreement__c.object
<CustomObject>
    <description>--DEPRECATED-- Records a user&apos;s agreement to a Terms &amp; Conditions document on a particular route in an Online Application.</description>
    <fields>
        <fullName>nPortal__Agreed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Stores whether or not the user has accepted a particular document in Customer Portal Online applications.</description>
        <inlineHelpText>Select this field if the terms outlined in the document have been accepted.</inlineHelpText>
        <label>Agreed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nPortal__Application__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Maps the document to the associated Application.</description>
        <label>Application</label>
        <referenceTo>LLC_BI__Application__c</referenceTo>
        <relationshipLabel>Route Agreements</relationshipLabel>
        <relationshipName>Route_Agreements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>nPortal__Route_Terms__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Maps to a particular record which defines which document has been agreed to and on which Route.</description>
        <label>Route Terms</label>
        <referenceTo>nPortal__Route_Terms__c</referenceTo>
        <relationshipLabel>Route Agreements</relationshipLabel>
        <relationshipName>Route_Agreements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>nPortal__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Maps the document to the user who has agreed to the terms.</description>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>Route Agreements</relationshipLabel>
        <relationshipName>Route_Agreements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>nPortal__lookupKey__c</fullName>
        <description>The field is optional. If populated the value must be unique across all the records of this type. The field typically contains an external identifier that is used to associate the record with its matching record in an external system. The field can also be used to efficiently associate related records, when importing data into nCino, without the need to know the internal ID for the record. For more information, refer to https://developer.salesforce.com/docs/atlas.en-us.apexcode.meta/apexcode/langCon_apex_dml_nested_object.htm.</description>
        <externalId>true</externalId>
        <label>lookupKey</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>-D Route Agreement</label>
    <listViews>
        <fullName>nPortal__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>RT{0000}</displayFormat>
        <label>Route Agreement Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>-D Route Agreements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>